--- a/MapApp/Views/MapPage.xaml
+++ b/MapApp/Views/MapPage.xaml
@@ -8,10 +8,66 @@
     Style="{StaticResource PageStyle}"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <Flyout
+            x:Key="AddPinFlyout"
+            Placement="Bottom"
+            Closed="AddPinFlyout_Closed" >
+            <StackPanel Width="300">
+                <TextBlock Height="30" Text="Add a pin" />
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" HorizontalAlignment="Right" Margin="0,5,5,0" Text="Name"/>
+                    <TextBox x:Name="addPinFlyoutTextBox" Grid.Column="1" />
+                    <Button Grid.Column="2" HorizontalAlignment="Center" Content="Add" Click="AddPinButton_Click" />
+                </Grid>
+            </StackPanel>
+        </Flyout>
+        <Flyout
+            x:Name="editPinFlyout"
+            x:Key="EditPinFlyout"
+            Placement="Bottom"
+            Closed="EditPinFlyout_Closed">
+            <StackPanel Width="400">
+                <TextBlock Height="30" Text="Edit a pin" />
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" HorizontalAlignment="Right" Margin="0,5,5,0" Text="Name"/>
+                    <TextBox x:Name="editPinFlyoutTextBox" KeyDown="EditPinFlyoutTextBox_KeyDown" Grid.Column="1" />
+                    <Button Grid.Column="2" HorizontalAlignment="Center" Content="Save" Click="EditPinSaveButton_Click" />
+                    <Button Grid.Column="3" HorizontalAlignment="Center" Content="Delete" Click="EditPinDeleteButton_Click" />
+                </Grid>
+            </StackPanel>
+        </Flyout>
+    </Page.Resources>
+
     <Grid>
         <maps:MapControl
             x:Name="mapControl"
             ZoomLevel="{x:Bind ZoomLevel, Mode=OneWay}"
-            Center="{x:Bind Center, Mode=OneWay}" />
+            Center="{x:Bind Center, Mode=OneWay}"
+            MapTapped="MapControl_MapTapped"
+            MapElementClick="MapControl_MapElementClick" >
+        </maps:MapControl>
+        <Grid  VerticalAlignment="Stretch" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button Content="Add line" VerticalAlignment="Top" Grid.Row="0"/>
+            <Grid x:Name="flyoutGrid" Grid.Row="1">
+                
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
