--- a/MapApp/Styles/Button.xaml
+++ b/MapApp/Styles/Button.xaml
@@ -6,6 +6,8 @@
     <Style  x:Key="MapButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="#AA000000" />
         <Setter Property="CornerRadius" Value="0" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="40" />
     </Style>
     
 </ResourceDictionary>
