--- a/MapApp/Views/ShellPage.xaml
+++ b/MapApp/Views/ShellPage.xaml
@@ -26,7 +26,7 @@
             Or to use an IconElement instead of a Symbol see https://github.com/Microsoft/WindowsTemplateStudio/blob/master/docs/projectTypes/navigationpane.md
             Edit String/en-US/Resources.resw: Add a menu item title for each page
             -->
-            <winui:NavigationViewItem x:Uid="Shell_Map" helpers:NavHelper.NavigateTo="views:MapPage" />
+            <winui:NavigationViewItem x:Uid="Shell_Map" helpers:NavHelper.NavigateTo="views:MainPage" />
         </winui:NavigationView.MenuItems>
         <Grid>
             <Frame x:Name="shellFrame" />
