--- a/MapApp/Styles/_Thickness.xaml
+++ b/MapApp/Styles/_Thickness.xaml
@@ -5,6 +5,7 @@
     <!--Medium size margins-->
     <Thickness x:Key="MediumLeftMargin">24,0,0,0</Thickness>
     <Thickness x:Key="MediumTopMargin">0,24,0,0</Thickness>
+    <Thickness x:Key="MediumTopLeftMargin">24,24,0,0</Thickness>
     <Thickness x:Key="MediumLeftRightMargin">24,0,24,0</Thickness>
     <Thickness x:Key="MediumRightMargin">0,0,24,0</Thickness>
     <Thickness x:Key="MediumTopBottomMargin">0,24,0,24</Thickness>
@@ -14,6 +15,7 @@
     <!--Small size margins-->
     <Thickness x:Key="SmallLeftMargin">12, 0, 0, 0</Thickness>
     <Thickness x:Key="SmallTopMargin">0, 12, 0, 0</Thickness>
+    <Thickness x:Key="SmallLeftTopMargin">12, 12, 0, 0</Thickness>
     <Thickness x:Key="SmallTopBottomMargin">0, 12, 0, 12</Thickness>
     <Thickness x:Key="SmallLeftRightMargin">12, 0, 12, 0</Thickness>
     <Thickness x:Key="SmallRightMargin">0, 0, 12, 0</Thickness>
